After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752187 - JNI: jaw_table_cell_get_row_column_span is missing
JNI: jaw_table_cell_get_row_column_span is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-09 18:10 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-10 10:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: create getRowColumnSpan (1.80 KB, patch)
2015-07-09 18:23 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI; Create jaw_table_cell_get_row_column_span (3.12 KB, patch)
2015-07-09 18:23 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Update HACKING (619 bytes, patch)
2015-07-09 18:25 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-09 18:10:42 UTC
Some detail about this function on https://git.gnome.org/browse/atk/tree/atk/atktablecell.h#n70

It can be used to figure out the issue that there is no equivalent java function which can be used to get the column or row span without taking arguments so it seems quite useful.
Comment 1 Magdalen Berns (irc magpie) 2015-07-09 18:23:04 UTC
Created attachment 307166 [details] [review]
Wrapper: create getRowColumnSpan
Comment 2 Magdalen Berns (irc magpie) 2015-07-09 18:23:44 UTC
Created attachment 307167 [details] [review]
JNI; Create jaw_table_cell_get_row_column_span
Comment 3 Magdalen Berns (irc magpie) 2015-07-09 18:25:29 UTC
Created attachment 307168 [details] [review]
Update HACKING