JNI: Create jaw_table_cell_get_row_column_span

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=752187